--- a/borrador.ipynb
+++ b/borrador.ipynb
@@ -2,30 +2,183 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Que funciones/estrategias vais a aplicar para decidir la nueva v y w en función de los parámetros medidos en cada nueva imagen/frame? Cuales serán dichos parámetros?\n",
+    "\n",
+    "Rango de color de la bola, Tamaño de la bola en la imagen y posición.\n",
+    "Cuando detecta blob de tamaño mínimo y color gira en la dirección adecuada para centrarla y se acerca hasta que llega al tamaño necesario. Si la bola se mueve, gira en tal dirección hasta volverla a centrar. \n",
+    "Dar vueltas sobre sí mismo si no ve nada\n",
+    "\n",
+    "Primera aproximación: sin localización relativa, girando y línea recta\n",
+    "w positivo (rot izq) si bola a la izq del centro\n",
+    "w negativo al revés\n",
+    "aumentar area línea recta en función de la raíz cuadrada del área\n",
+    "\n",
+    "\n",
+    "Segunda aproximación: con localización relativa explícita\n",
+    "generar trayectoria utilizando ambas a la vez"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import time\n",
+    "import cv2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "angulo_tangencia = 1.57\n",
-      "distancia_centros = 2.00\n"
+     "ename": "NameError",
+     "evalue": "name 'REDMIN' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mtrackObject\u001b[39m(\u001b[38;5;28mself\u001b[39m, targetSize \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m10\u001b[39m, target \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m0.5\u001b[39m,\u001b[38;5;241m0.5\u001b[39m],\n\u001b[1;32m----> 2\u001b[0m                     colorRangeMin\u001b[38;5;241m=\u001b[39m\u001b[43mREDMIN\u001b[49m,\n\u001b[0;32m      3\u001b[0m                     colorRangeMax\u001b[38;5;241m=\u001b[39mREDMAX,\n\u001b[0;32m      4\u001b[0m                     use_sensor\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, object_detector\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, stop_detector\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m):\n\u001b[0;32m      5\u001b[0m \u001b[38;5;250m        \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;124;03m        Tracks an object with a minumum tagetSize placed in the target position\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;124;03m        proportions in the image, with a certain color range in HSV.\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;124;03m        :return: True if the object was caught, False otherwise\u001b[39;00m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;124;03m        \"\"\"\u001b[39;00m\n\u001b[0;32m     16\u001b[0m         finished \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'REDMIN' is not defined"
      ]
     }
    ],
    "source": [
-    "import math\n",
+    "def detectBall(self, detector, colorRangeMin, colorRangeMax):\n",
+    "    \n",
+    "    img = self.takePhoto()\n",
+    "     \n",
+    "    mask=cv2.inRange(img, colorRangeMin, colorRangeMax)\n",
+    "    # apply the mask\n",
+    "    img = cv2.bitwise_and(img, img, mask = mask)\n",
+    "    keypoints = detector.detect(255-mask)\n",
+    "    # TODO: pillar sólo 1?, el primero, o el más grande    \n",
+    "    x, y, area = keypoints[0].x, keypoints[0].y, keypoints[0].size\n",
+    "# TODO: MÍNIMO TAMAÑÑO?\n",
+    "    return x, y, area # TODO ÁNGULO?\n",
     "\n",
-    "R = 2\n",
-    "radioD = 1\n",
-    "radioAlfa = 1\n",
     "\n",
-    "distancia_centros = math.sqrt(R**2 - (radioD-radioAlfa)**2)\n",
-    "angulo_tangencia = math.pi/2 + math.asin((radioD-radioAlfa)/distancia_centros)\n",
-    "print(\"angulo_tangencia = %.2f\" % (angulo_tangencia))\n",
-    "print(\"distancia_centros = %.2f\" % (distancia_centros))"
+    "def trackObject(self, targetSize, target,\n",
+    "                    colorRangeMin, colorRangeMax,\n",
+    "                    catch=True):\n",
+    "                    # use_sensor=True, object_detector=None, stop_detector=True):\n",
+    "        finished = False\n",
+    "        ball_caught = False\n",
+    "        area = 0\n",
+    "        self.last_pos_left = False\n",
+    "        self.last_pos_right = False\n",
+    "        self.last_pos_down = False\n",
+    "        print(\"Starting basket position: \", self.getBasketPosition())\n",
+    "        self.catch(goal_position = \"initial\")\n",
+    "        \n",
+    "        \n",
+    "        print(\"Starting object detector ...\")\n",
+    "        # TODO: CREAR CON PARAMETROS\n",
+    "        detector = cv2.SimpleBlobDetector(params)\n",
+    "        \n",
+    "        \n",
+    "        time.sleep(4.0)\n",
+    "        # clear log file\n",
+    "        self.log_file = open(self.log_filename, \"w\")\n",
+    "        self.log_file.close() \n",
+    "\n",
+    "        while not finished:\n",
+    "            print(\"Looking for promising object ...\")\n",
+    "            targetPositionReached = False\n",
+    "            # 1. search the most promising blob\n",
+    "            # TODO\n",
+    "            x, y, area = self.detectBall(detector, colorRangeMin, colorRangeMax)         \n",
+    "            \n",
+    "            # Dar vueltas hasta encontrar un objeto\n",
+    "            while area < targetSize:\n",
+    "                search_v, search_w = self.calculateSpeedToSearch()\n",
+    "                self.setSpeed(search_v, search_w)\n",
+    "                time.sleep(self.tracking_period)\n",
+    "                x, y, area = self.detectBall(detector, colorRangeMin, colorRangeMax)\n",
+    "\n",
+    "\n",
+    "            print(\"Promising object found ...\")\n",
+    "            self.setSpeed(0, 0)\n",
+    "            \n",
+    "            time.sleep(0.05)\n",
+    "\n",
+    "            self.calculateZonePosition(x, y, detector)\n",
+    "            self.searching_countdown = 0\n",
+    "            while not targetPositionReached or not ball_caught: \n",
+    "                # 2. decide v and w for the self to get closer to target position\n",
+    "                v, w = self.calculateSpeedToTrack(\n",
+    "                    x, y,\n",
+    "                      area, target)\n",
+    "                \n",
+    "                self.setSpeed(v, w)\n",
+    "                # 3. check la posición válida para coger la bola\n",
+    "                if (abs(x - target[0]) < 0.1 * targetSize and\n",
+    "                    abs(y - target[1]) < 0.1 * targetSize):\n",
+    "                    print(\"Target position reached ...\")\n",
+    "                    self.catch()\n",
+    "                    time.sleep(0.6)\n",
+    "\n",
+    "                    if not self.checkBallCaught():\n",
+    "                        print(\"Failed to catch the ball\")\n",
+    "                        self.release()\n",
+    "                        time.sleep(0.2)\n",
+    "                        x, y, area = detector.getObject()\n",
+    "                        if area < 0.5 * targetSize:\n",
+    "                            break\n",
+    "                        self.calculateZonePosition(x, y, detector)\n",
+    "                    else:\n",
+    "                        print(\"Ball caught\")\n",
+    "                        targetPositionReached = True  \n",
+    "                # Si no estamos en el target continuamos           \n",
+    "                \n",
+    "                time.sleep(self.tracking_period)\n",
+    "\n",
+    "            if targetPositionReached:\n",
+    "                finished = True\n",
+    "                self.setSpeed(0, 0)\n",
+    "                \n",
+    "        return finished"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PINZA_ABAJO = 0\n",
+    "PINZA_ARRIBA = 90\n",
+    "\n",
+    "def catch(self):\n",
+    "    self.BP.set_motor_position(self.MOTOR, 0)\n",
+    "    self.BP.set_motor_position(self.basket_motor_port, -self.catchDPS)\n",
+    "    time.sleep(0.5)\n",
+    "    self.BP.set_motor_position(self.basket_motor_port, 90)\n",
+    "    return True\n",
+    "\n",
+    "def release(self):\n",
+    "    self.BP.set_motor_position(self.basket_motor_port, 0)\n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
